# botcoin

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  alembic.ini  config.py  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  kraken_client.py  log_controller.py  logger.py  main.py  processed_orders.py  pyproject.toml  pytest.ini  requests.http  requirements-dev.txt  requirements.txt  telegram_interface.py  trailing_controller.py
.github/: roadmap-issues.json
.github/agents/: implementation-plan.agent.md  tech-debt-remediation-plan.agent.md
.github/instructions/: update-docs-on-code-change.instructions.md
.github/workflows/: ci.yml  create-roadmap-issues.yml  deploy.yml
api/: app.py  requests.http  requests.http.example  schemas.py
api/routes/: backtest.py  balance.py  config.py  (+6 more)
core/: config.py  config_store.py  database.py  logging.py  runtime.py  scheduler.py  state.py  utils.py  validation.py
docs/: BACKLOG.md  CHANGELOG.md  ROADMAP.md  configuration.md  operations.md  trading-strategy.md
exchange/: kraken.py
optimizer/: job_store.py  jobs.py  supervisor.py  worker.py
plan/: phase-10-trading-tools-integration.md  phase-5-fastapi.md  phase-6-code-quality.md  phase-7-cicd.md  phase-8-grafana.md  phase-9-project-documentation.md
scripts/: create-roadmap-issues.sh  load_legacy_data.py
services/: telegram.py
strategies/: dualk.py  multipliers.py  onek.py  rebuy.py
trading/: backtest.py  engine.py  inventory_manager.py  market_analyzer.py  optimize_params.py  optimizer.py  parameters_manager.py  positions_manager.py
utils/: atr_manager.py  market_analyzer.py  market_noise_analyzer.py
(+58 files in other folders)
